# mtb_core_old

./: .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
.github/workflows/: aws-ecr.yml
src/control/: CMakeLists.txt  package.xml
src/control/src/: mtb_control_node.cpp
src/state_estimation/: CMakeLists.txt  package.xml
src/state_estimation/config/: map_odom_ekf.yaml  odom_base_link_ekf.yaml
src/state_estimation/launch/: state_estimation.launch.py
src/state_publisher/: CMakeLists.txt  package.xml
src/state_publisher/configs/: motors.yaml
src/state_publisher/description/urdf/: arms.urdf  happy.urdf  happy_v1_7_0.urdf
src/state_publisher/launch/: state_publisher.launch.py
src/state_publisher/src/: state_publisher_node.cpp
